--- a/help/nemp-help-de.tex
+++ b/help/nemp-help-de.tex
@@ -1145,6 +1145,8 @@ Metadaten sind Zusatzinformationen in den Musikdateien, oft auch als \emph{ID3-T
 
 Ist diese Option aktiviert, können einige Metadaten wie Interpet, Titel oder Album direkt über die Anzeige in der Medienliste geändert werden.
 
+\item \textbf{Bei Eingabe neuer Tags Inkonsistenzen auflösen.} \emph{Standard: Ein.} Bei der Eingabe neuer erweiterter Tags für die Tagwolke können Inkonsistenzen auftreten. Das sind kleinere Ungereimtheiten wie die doppelte Eingabe eines Tags, oder aber gröbere wie Widersprüche zu den Ignorier- und Änderungsregeln, die im Tagwolken-Editor definiert sind. Nemp kann diese Inkonsistenzen automatisch auflösen, indem doppelte Einträge gelöscht (bzw. nicht erstellt) werden und die Ignorier- und Änderungsregeln auf die manuelle Eingabe angewendet werden.
+
 \item \textbf{Automatische Bewertung und Abspielzähler.} Nemp zählt auf Wunsch mit, wie oft Sie welche Dateien anhören. Diese Information wird in der Medienbibliothek gespeichert und - falls der Schnellzugriff auf Metadaten erlaubt ist - auch in den Metadaten der Datei. 
 
 Wenn bei Auswahl dieser Option der Schnellzugriff auf Metadaten untersagt wird, dann können Bewertung und Abspielzähler bei einem erneuten Einlesen der Medienbibliothek verloren gehen.
