--- a/help/nemp-help-en.tex
+++ b/help/nemp-help-en.tex
@@ -1156,6 +1156,8 @@ Metadata are additional information in the music files, often referred to as \em
 
 If this option is enabled, some metadata such as interpet, title, or album can be changed directly from the media list display.
 
+\item \textbf{Resolve inconsistencies when entering new tags.} \emph{Default: On.} Inconsistencies can occur when entering new extended tags for the tag cloud. These are minor inconsistencies such as duplicates of a tag, or more severe ones such as inconsistencies with the Ignore- and Rename-rules defined in the tag cloud editor. Nemp can automatically resolve these inconsistencies by deleting (or not creating) duplicate entries and applying the Ignore- and Rename-rules to the user input.
+
 \item \textbf{Automatic rating and play counter.} Nemp can also count how often you listen to which files. This information is stored in the media library and - if quick access to metadata is allowed - also in the file's metadata. 
 
 If you do not allow quick access to metadata when selecting this option, the evaluation and playback counters may be lost when the media library is re-loaded.
