--- a/help/nemp-help-de.tex
+++ b/help/nemp-help-de.tex
@@ -1301,7 +1301,7 @@ Das Nemp-Deskband für Windows XP und auch die Display-App für die Logitech G15, 
 Im Folgenden eine Zusammenfassung der Neuerungen in den einzelnen Versionen - von der aktuell vorliegenden bis hin zur allerersten Version dieses Programmes, das damals noch gar kein Player war. In diesem Abschnitt finden Sie die wesentlichen Neuerungen und nennenswerten Bugfixes, aber keine vollständige Liste aller Änderungen.
 
 
-\subsection*{Version 4.8.0, Februar 2018}
+\subsection*{Version 4.8.0, März 2018}
 
 \textbf{Neue Funktionen und Änderungen}
 \begin{itemize}
